@@ -13,6 +13,7 @@ debian-installer (20040531) UNRELEASED; urgency=low
   * Joey Hess
     - Split out a new cyrllic root floppy on i386 as the regular root floppy
       is full again.
+    - Fix stats for images without kernels.
   * Joshua Kwan
     - Fix sparc64 CDs for good. I think.
   * Steve Langasek
